--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: '>=2.17.5 <3.0.0'
 
 dependencies:
-  path: ^1.8.0
+  path: ^1.8.2
+  intl: ^0.17.0
+  args: ^2.3.1
 
 dev_dependencies:
   lints: ^2.0.0
