--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: minerva
-description: A sample command-line application.
+description: Server side framework for Dart.
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/GlebBatykov/minerva
 
 environment:
   sdk: '>=2.17.5 <3.0.0'
@@ -10,6 +10,7 @@ dependencies:
   path: ^1.8.2
   intl: ^0.17.0
   args: ^2.3.1
+  mime_type: ^1.0.0
 
 dev_dependencies:
   lints: ^2.0.0
