--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: minerva
 description: Server side framework for Dart. Allows you to create multithreaded REST API.
-version: 0.1.5
+version: 0.1.6
 homepage: https://github.com/GlebBatykov/minerva
 
 environment:
-  sdk: '>=2.17.5 <3.0.0'
+  sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
   path: ^1.8.2
