--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: minerva
-description: Dart backend framework. Supports multithreading, websockets. It contains a project build system, a request processing pipeline, authentication aids, and logging tools.
+description: Dart backend framework. Supports multithreading, websockets. It contains project build system, request processing pipeline, authentication aids, and logging tools.
 version: 0.2.3
 homepage: https://github.com/GlebBatykov/minerva
 
